--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
-  <body></body>
+  <body>
+    <a href='header.html'>쿠팡 헤더</a>
+  </body>
 </html>
