--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>내 쇼핑 정보</title>
+    
   </head>
-  <body></body>
+  <body>
+<a href="inpo.html">내쇼핑정보</a>
+  </body>
 </html>
